--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,8 @@ apply plugin: 'java'
 
 sourceSets {
 	main {
-		java {
-			srcDirs= ["src/"]
-		}
-		resources {
-			srcDirs= ["res"]
-		}
+		java { srcDirs= ["src/"] }
+		resources { srcDirs= ["res"] }
 	}
 }
 
